# texture2ddecoder

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: doc.yml  linux_manywheels.yml  python-package.yml  release.yml  test.yml
src/: pylink.cpp
src/Texture2DDecoder/: astc.cpp  endianness.h  etc.cpp
src/Texture2DDecoder/crunch/: crn_decomp.h
src/Texture2DDecoder/unitycrunch/: crn_decomp.h
tests/: test_main.py
texture2ddecoder/: __init__.py  _texture2ddecoder.pyi
